modules/vpc/vpc.tf
# ----- vpc -----
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/26"
  tags = {
    Name = "Laboratory VPC"
  }
}

# ----- Subnets -----
resource "aws_subnet" "public_subnet_a" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = "10.0.0.0/28"
  availability_zone = "us-east-1a"
  tags = {
    Name = "public_subnet_1a"
  }
}

resource "aws_subnet" "public_subnet_b" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = "10.0.1.0/28"
  availability_zone = "us-east-1b"
  tags = {
    Name = "public_subnet_1b"
  }
}

# ----- Internet GateWay -----
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "internet_gateway"
  }
}

# ----- Route Table -----
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "public route table"
  }
}

# ----- Associations -----
resource "aws_route_table_association" "public_rt_association_a" {
  subnet_id      = aws_subnet.public_subnet_a.id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_rt_association_b" {
  subnet_id      = aws_subnet.public_subnet_b.id
  route_table_id = aws_route_table.public_route_table.id
}

# ----- Routes -----
resource "aws_route" "public_route" {
  route_table_id         = aws_route_table.public_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

output "subnet_a_id" {
  value = aws_subnet.public_subnet_a.id
}

output "subnet_b_id" {
  value = aws_subnet.public_subnet_b.id
}
